# bitlab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/bitlab/: __init__.py  cli.py
src/bitlab/arch/: __init__.py  codegen.py  endianness.py  explain.py  fixed_point.py  gray.py  ieee754.py
src/bitlab/bitutils/: __init__.py  core.py
src/bitlab/comms/: __init__.py  cobs.py  codegen.py  explain.py
src/bitlab/crc/: __init__.py  codegen.py  engine.py  explain.py  functions.py  presets.py
src/bitlab/ecc/: __init__.py  codegen.py  explain.py  gf256.py  polynomial.py  reed_solomon.py
src/bitlab/parity/: __init__.py  hamming.py  parity.py
src/bitlab/registers/: __init__.py  codegen.py  core.py  explain.py
tests/: test_arch_codegen.py  test_arch_endianness.py  test_arch_explain.py  test_arch_fixed_point.py  test_arch_gray.py  test_arch_ieee754.py  test_bitutils.py  test_comms_cobs.py  test_comms_codegen.py  test_comms_explain.py  test_crc_codegen.py  test_crc_engine.py  test_crc_explain.py  test_crc_functions.py  test_ecc_codegen.py  test_ecc_explain.py  test_ecc_gf256.py  test_ecc_reed_solomon.py  test_hamming.py  test_parity.py  test_registers_codegen.py  test_registers_core.py  test_registers_explain.py
